--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "core-decorators": "^0.12.3",
     "css-loader": "^0.23.1",
     "lodash": "^4.13.1",
     "postcss": "^5.0.21",
@@ -56,6 +58,11 @@
       "react",
       "es2015",
       "stage-0"
+    ],
+    "plugins": [
+      [
+        "transform-decorators-legacy"
+      ]
     ]
   }
 }
